Add support for wasm formatter components
This change bakes in an embedded wasmtime engine which can load and run
wasm components implementing the `formatter` wit interface.

This allows extending pruner with 'native' formatters which can be
written in any language that can compile to wasm, and can operate on any
language source code.

As an example, an initial `trim_newlines` wasm formatter is included in
this repo.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,17 @@ clap = { version = "4", features = ["derive"] }
 tree-sitter = "0.25"
 tree-sitter-loader = "0.25"
 
+wasmtime = "40"
+wasmtime-wasi = "40"
+
 rayon = "1"
 toml = "0.9"
 serde = "1.0"
 url = "2"
 anyhow = "1"
 xdg = "3"
+sha2 = "0.10"
+ureq = "2"
 
 ignore = "0.4"
 globset = "0.4"
