--- a/plugins/align-comments/cargo.toml
+++ b/plugins/align-comments/cargo.toml
@@ -1,13 +1,11 @@
-[workspace]
-
 [package]
-name = "align_comments"
+name = "align-comments"
 version = "0.1.0"
 edition = "2024"
 resolver = "2"
 
 [dependencies]
-wit-bindgen = "0.50"
+pruner-plugin-api = { path = "../../crates/plugin-api/" }
 
 tree-sitter = "0.25"
 tree-sitter-clojure = "0.1.0"
