--- a/plugins/trim-newlines/cargo.toml
+++ b/plugins/trim-newlines/cargo.toml
@@ -1,13 +1,11 @@
-[workspace]
-
 [package]
-name = "trim_newlines"
+name = "trim-newlines"
 version = "0.1.0"
 edition = "2024"
 resolver = "2"
 
 [dependencies]
-wit-bindgen = "0.50"
+pruner-plugin-api = {path = "../../crates/plugin-api/"}
 
 [lib]
 crate-type = ["cdylib"]
